add logo, change hero size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">TaxiRoute</a>
+                <a class="navbar-brand" href="#page-top">
+                    <img src="assets/img/logo.png" class="img-fluid" width="50" alt="logo">
+                    TaxiRoute</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -34,6 +36,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">TaxiRoute</h1>
+                    <img src="assets/img/logo.png" width="200" alt="">
                     <h2 class="masthead-subheading mb-0">Connecting Commuters</h2>
                     <small class="d-block text-light">. . . comming soon . . .</small>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
